--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@types/blessed": "^0.1.17",
 		"@types/node": "^14.0.11",
+		"blessed": "^0.1.81",
 		"dotenv": "^8.2.0",
 		"typescript": "^3.9.5"
 	}
