--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@types/blessed": "^0.1.17",
 		"@types/node": "^14.0.11",
+		"chalk": "^4.1.0",
 		"dotenv": "^8.2.0",
 		"typescript": "^3.9.5"
 	}
